Voting/rating support
Add new vote entry (GET, PUT, DELETE)
Register error-to-exception handler from symfony/debug
Fix common issue if empty http-body received. Improve error handling
Update docs
