# app/Resources/Book.php
@@ -8,6 +8,7 @@
 
 namespace Bookmarker\Resources;
 
+use Bookmarker\Db\Repositories\VotesRepository;
 use Bookmarker\FileDrivers\LocalDriver;
 use Bookmarker\Responses\CreatedResponse;
 use Bookmarker\Responses\ErrorResponse;
@@ -217,7 +218,7 @@ class Book extends Resource
             if (!$book instanceof Entities\Book) {
                 throw new NotFoundHttpException('Requested resource not found');
             }
-            $data = $this->getBody($req);
+            $data = $this->getNotEmptyBody($req);
             $app['orm.em']->getRepository('doctrine:Book')->updateBook($book, $data);
         } catch (NotFoundHttpException $ne) {
             return new ErrorResponse($ne->getMessage(), 404);
@@ -520,7 +521,7 @@ class Book extends Resource
             if (!($book instanceof Entities\Book && $bookCover instanceof Entities\BookCovers)) {
                 throw new NotFoundHttpException('Requested resource not found');
             }
-            $data = $this->getBody($req);
+            $data = $this->getNotEmptyBody($req);
             $app['orm.em']->getRepository('doctrine:Book')->updateBookCover($bookCover, $data);
         } catch (NotFoundHttpException $ne) {
             return new ErrorResponse($ne->getMessage(), 404);
@@ -552,7 +553,7 @@ class Book extends Resource
      *     format="int64",
      *     minimum=1.0
      *   ),
-     *   @SWG\Response(response=400, description="Invalid ID supplied"),
+     *   @SWG\Response(response=400, description="Unexpected error occurred"),
      *   @SWG\Response(response=404, description="Book or Book cover not found"),
      *   @SWG\Response(response=200, description="success")
      * )
@@ -569,6 +570,139 @@ class Book extends Resource
                 throw new NotFoundHttpException('Requested resource not found');
             }
             $app['orm.em']->getRepository('doctrine:Book')->deleteBookCover($bookCover);
+        } catch (NotFoundHttpException $ne) {
+            return new ErrorResponse($ne->getMessage(), 404);
+        } catch (\Exception $e) {
+            return new ErrorResponse($e->getMessage());
+        }
+        return new Response('', 200);
+    }
+
+    /**
+     * @SWG\Get(
+     *     path="/book/{id}/votes",
+     *     summary="Compute rating of book based on user votes",
+     *      @SWG\Parameter(
+     *         description="ID of book to fetch",
+     *         format="int64",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         type="integer"
+     *     ),
+     *     produces={
+     *          "application/json"
+     *     },
+     *     @SWG\Response(
+     *         response=200,
+     *         description="vote scalar value",
+     *         @SWG\Schema(
+     *             type="float"
+     *         )
+     *     ),
+     *   @SWG\Response(response=400, description="Unexpected error occurred"),
+     *   @SWG\Response(response=404, description="Book or Book cover not found"),
+     * )
+     * @param \Silex\Application $app
+     * @param int $id
+     * @return ErrorResponse|Response
+     */
+    public function getRating(\Silex\Application $app, $id)
+    {
+        try {
+            $book = $app['orm.em']->find('doctrine:Book', $id);
+            if (!$book instanceof Entities\Book) {
+                throw new NotFoundHttpException('Requested resource not found');
+            }
+            $rating = $app['orm.em']->getRepository('doctrine:Votes')->getRating($book);
+        } catch (NotFoundHttpException $ne) {
+            return new ErrorResponse($ne->getMessage(), 404);
+        } catch (\Exception $e) {
+            return new ErrorResponse($e->getMessage());
+        }
+        return new Response($app['serializer']->serialize($rating, RESPONSE_FORMAT), 200);
+    }
+
+    /**
+     * @SWG\Put(
+     *     path="/book/{id}/votes",
+     *     operationId="replace",
+     *     summary="Allows user to re-vote for book",
+     *      @SWG\Parameter(
+     *         description="ID of book to fetch",
+     *         format="int64",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         type="integer"
+     *     ),
+     *     @SWG\Parameter(
+     *         name="body",
+     *         in="body",
+     *         description="Vote object with values 1..5",
+     *         required=true,
+     *         @SWG\Schema(
+     *                  @SWG\Property(
+     *                      property="vote",
+     *                      type="integer"
+     *                  )
+     *         ),
+     *     ),
+     *   @SWG\Response(response=400, description="Unexpected error occurred"),
+     *   @SWG\Response(response=404, description="Book not found"),
+     *   @SWG\Response(response=200, description="success")
+     * )
+     * @param \Silex\Application $app
+     * @param Request $req
+     * @param $id
+     * @return ErrorResponse|Response
+     */
+    public function voteForBook(\Silex\Application $app, Request $req, $id)
+    {
+        try {
+            $book = $app['orm.em']->find('doctrine:Book', $id);
+            if (!$book instanceof Entities\Book) {
+                throw new NotFoundHttpException('Requested resource not found');
+            }
+            $data = $this->getNotEmptyBody($req);
+            $result = $app['orm.em']->getRepository('doctrine:Votes')->voteForBook($book, $data);
+            $status = ($result === VotesRepository::VOTE_CREATED) ? 201 : 200;
+        } catch (NotFoundHttpException $ne) {
+            return new ErrorResponse($ne->getMessage(), 404);
+        } catch (\Exception $e) {
+            return new ErrorResponse($e->getMessage());
+        }
+        return new Response('', $status);
+    }
+
+    /**
+     * @SWG\Delete(path="/book/{id}/votes",
+     *   summary="Delete user`s vote only",
+     *   @SWG\Parameter(
+     *     name="id",
+     *     in="path",
+     *     description="ID of the book that needs to be deleted",
+     *     required=true,
+     *     type="integer",
+     *     format="int64",
+     *     minimum=1.0
+     *   ),
+     *   @SWG\Response(response=400, description="Unexpected error occurred"),
+     *   @SWG\Response(response=404, description="Book not found"),
+     *   @SWG\Response(response=200, description="success")
+     * )
+     * @param \Silex\Application $app
+     * @param $id
+     * @return ErrorResponse|Response
+     */
+    public function deleteVote(\Silex\Application $app, $id)
+    {
+        try {
+            $book = $app['orm.em']->find('doctrine:Book', $id);
+            if (!$book instanceof Entities\Book) {
+                throw new NotFoundHttpException('Requested resource not found');
+            }
+            $app['orm.em']->getRepository('doctrine:Votes')->deleteVote($book);
         } catch (NotFoundHttpException $ne) {
             return new ErrorResponse($ne->getMessage(), 404);
         } catch (\Exception $e) {
