# swagger.json
@@ -598,6 +598,63 @@
                 }
             }
         },
+        "/book/{id}/votes": {
+            "get": {
+                "summary": "Compute rating of book based on user votes",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of book to fetch",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "vote scalar value",
+                        "schema": {
+                            "type": "float"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Book or Book cover not found"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Delete user`s vote only",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the book that needs to be deleted",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64",
+                        "minimum": 1
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Book not found"
+                    },
+                    "200": {
+                        "description": "success"
+                    }
+                }
+            }
+        },
         "/genre": {
             "get": {
                 "summary": "Retrieve all genres",
@@ -959,6 +1016,9 @@
                     "items": {
                         "$ref": "#/definitions/BookCover"
                     }
+                },
+                "description": {
+                    "type": "string"
                 }
             },
             "type": "object"
